# todos

./: .env  Cargo.toml  Dockerfile  Dockerfile-glibc  diesel.toml  docker-compose.yml
.github/workflows/: rust.yml
.sqlx/: query-0f16b6729c2330a765158839eeeb132a906e7fef1463aa38549bfde8fd39f188.json  query-32b2cd3ffb75a830f72bfb6f5481c8d6327f975721a8c84cc7b91110aa04f2b7.json  query-43b9f51857f384e7c8c83846a8c8e7b6ee265de011316099eaae7442f12267be.json  query-448df73aa10aac44022642924e8a129e0be1b9fa461bf1186bdbef6519f87908.json  query-48301d6ec97d0f426ed272ff05095984f4cd7db0871b72ecd3ea6c7c58e099c5.json  query-4dd725684ad27d2606de7cae4cebdf3fba4167b5d09baa67a7a537935ef5fc34.json  query-50a271746cd028a39f0364cd4b7d74831d563b68ebb996e007b086587de02d59.json  query-767ff4ec05ca99a96c7f6f87fde616ddd9f5a40183ed489f304cd2ba1f075236.json  query-a0be4390707d4537173ae89a2fd914208ad2c777b76b86ee57f802b5d86ca18c.json  query-b8217a5ea3407a6e920a46a2d623956a72d3c273957746619a62b7f051aa6f40.json  query-b9b18291e93821747a5c0ecad5eadb9615dc40fdb815c4e0b751d4ae0b9f903b.json  query-cb6a6c45f75894686b6acca316861ab56c939a9386b73279963cce21b6452836.json  query-e0e1ac8509ce9945834bba2d62e597be95798b4722fc0f93b86105f06338a840.json
migrations/: 20241230113346_01.up.sql  20241230203522_02.up.sql  20241231104509_03.down.sql  20241231104509_03.up.sql
src/: main.rs  middlewares.rs  model.rs  repository.rs  resource.rs  schema.rs  usecase.rs
