[package]
name = "todos"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
dotenvy = "0.15"
serde = { version = "1.0.216", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "migrate"] }
