[package]
name = "todos"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros", "http2"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "postgres" ] }
serde = { version = "1.0.216", features = ["derive"] }
futures = "0.3.31"
hyper = "1.5.2"
rayon = "1.10.0"
tokio-stream = "0.1.16"
http-body-util = "0.1.2"
serde_json = "1.0.134"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = {version =  "0.22.1", features = ["default"] }
