[package]
name = "todos"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros", "http2"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "signal"] }
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "postgres", "chrono"] }
serde = { version = "1.0.216", features = ["derive"] }
futures = "0.3.31"
hyper = "1.5.2"
tokio-stream = "0.1.16"
http-body-util = "0.1.2"
serde_json = "1.0.134"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4.39", features = ["serde"] }
base64 = {version =  "0.22.1", features = ["default"] }
dotenv = "0.15.0"
strum = "0.26.3"
strum_macros = "0.26.3"